# boat_dynamics

./: .gitmodules  CMakeLists.txt  package.xml
include/boat_dynamics/: boat_dynamics.h
mesh/: ship_nwu_GCS.dae  ship_nwu_GCS_old.dae
src/: boat_dynamics.cpp  boat_dynamics_node.cpp
